--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             { id: "jokerbrand", name: "MKS sports", url: "https://mksplay.pages.dev/mkid?id=t20wc" },
             { id: "ytlive", name: "YouTube Live", url: "https://www.youtube.com/embed/CSTRAWxWBwQ" },
             { id: "HINDI", name: "Star Sports 1 Hindi", url: "https://mks-live.pages.dev/mkstar?channel_id=174"},
-            { id: "myfile", name: "Live Match", url: "https://mksplay.pages.dev/mkid?id=t20wc" }
+            { id: "myfile", name: "Live Match(English)", url: "https://mks-live.pages.dev/mkstar?channel_id=1142" }
         ];
 
         let hls = null;
