--- a/index.html
+++ b/index.html
@@ -145,10 +145,10 @@
         const channels = [
             { id: "willow", name: "Willow HD", url: "https://amg01269-amg01269c1-sportstribal-emea-5204.playouts.now.amagi.tv/ts-eu-w1-n2/playlist/amg01269-willowtvfast-willowplus-sportstribalemea/playlist.m3u8" },
             { id: "haterskigandmaro", name: "MKS Sports (Worker)", url: "https://mksplay.pages.dev/mkid?id=t20wc" },
-            { id: "jokerbrand", name: "MKS sports", url: "https://mksplay.pages.dev/mkid?id=t20wc" },
+            { id: "jokerbrand", name: "MKS sports", url: "https://mksplay.pages.dev/mkid?id=t20am" },
             { id: "ytlive", name: "YouTube Live", url: "https://www.youtube.com/embed/CSTRAWxWBwQ" },
             { id: "HINDI", name: "Star Sports 1 Hindi", url: "https://mks-live.pages.dev/mkstar?channel_id=174"},
-            { id: "myfile", name: "Live Match", url: "https://mksplay.pages.dev/mkid?id=t20wc" }
+            { id: "myfile", name: "Live Match", url: "https://mks-live.pages.dev/mkstar?channel_id=1984" }
         ];
 
         let hls = null;
