--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
         const channels = [
             { id: "willow", name: "Willow HD", url: "https://amg01269-amg01269c1-sportstribal-emea-5204.playouts.now.amagi.tv/ts-eu-w1-n2/playlist/amg01269-willowtvfast-willowplus-sportstribalemea/playlist.m3u8" },
-            { id: "haterskigandmaro", name: "INDIA vs Pakistan Highlights", url: "hssportsprepack.akamaized.net/videos/cricket/1271436593/1540062348/in/eng/v2/avc/1771193842715/hls/plain/media-1/index.m3u8" },
+            { id: "haterskigandmaro", name: "INDIA vs Pakistan Highlights", url: "staytuned" },
             { id: "jokerbrand", name: "MKS sports", url: "https://mksplay.pages.dev/mkid?id=prime" },
             { id: "ytlive", name: "YouTube Live", url: "https://www.youtube.com/embed/CSTRAWxWBwQ" },
             { id: "HINDI", name: "Star Sports 1 Hindi", url: "https://mks-live.pages.dev/mkstar?channel_id=174"},
