--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes">
-    <title>@MKSsports3- Live</title>
+    <title>MKS sports- Live</title>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
@@ -71,7 +71,7 @@
 <body oncontextmenu="return false;">
 
     <div class="header">
-        <div class="logo" onclick="unlockAdmin()">ROYALMANAS <span>SUBSCRIBE</span></div>
+        <div class="logo" onclick="unlockAdmin()">@MKSsports3 YOUTUBE CHANNEL<span>SUBSCRIBE</span></div>
         <div class="head-btns">
             <a href="https://t.me/MKSSports_3" class="h-btn hb-tg" target="_blank"><i class="fab fa-telegram-plane"></i> Join</a>
             <a href="https://youtube.com/@mkssports3?si=9XNRUtdeTvqivd9e&sub_confirmation=1" class="h-btn hb-yt" target="_blank"><i class="fab fa-youtube"></i> Sub</a>
