--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         const channels = [
             { id: "willow", name: "Willow HD", url: "https://amg01269-amg01269c1-sportstribal-emea-5204.playouts.now.amagi.tv/ts-eu-w1-n2/playlist/amg01269-willowtvfast-willowplus-sportstribalemea/playlist.m3u8" },
             { id: "jokerbrand", name: "MKS sports", url: "https://mksplay.pages.dev/mkid?id=prime" },
-            { id: "ytlive", name: "YouTube Live", url: "https://www.youtube.com/embed/CSTRAWxWBwQ" },
+            { id: "ytlive", name: "YouTube Live", url: "https://youtu.be/embed/FOkqFHqSxT0?si=WceqJgwQS4hxuje-" },
             { id: "HINDI", name: "Star Sports 1 Hindi", url: "https://mks-live.pages.dev/mkstar?channel_id=174"},
             { id: "myfile", name: "Live Match", url: "https://mks-live.pages.dev/mkstar?channel_id=1984" }
         ];
