--- a/index.html
+++ b/index.html
@@ -49,25 +49,19 @@
         .controls-box { padding: 15px 10px; }
         .prominent-fix-btn { display: flex; align-items: center; justify-content: center; gap: 10px; width: 100%; padding: 15px; margin-bottom: 15px; background: linear-gradient(45deg, #ffb400, #ff8800); color: #000; font-weight: 900; font-size: 16px; border-radius: 12px; text-decoration: none; text-transform: uppercase; box-shadow: 0 4px 15px rgba(255, 180, 0, 0.4); animation: glow 2s infinite; }
         
-        .channels-section { width: 100%; max-width: 800px; margin: 20px auto 10px; padding: 0 10px; box-sizing: border-box; }
-        .section-title { display: flex; align-items: center; gap: 10px; font-size: 16px; font-weight: 800; text-transform: uppercase; margin-bottom: 15px; color: white; }
-        .section-title::before { content: ""; display: block; width: 4px; height: 18px; background: var(--accent-red); }
-        .channel-grid { display: grid; grid-template-columns: repeat(2, 1fr); gap: 12px; }
-        .channel-card { background: #1a1c23; border: 1px solid #2a2d35; border-radius: 12px; padding: 25px 10px; display: flex; flex-direction: column; align-items: center; justify-content: center; gap: 12px; cursor: pointer; transition: 0.3s; box-shadow: 0 4px 10px rgba(0,0,0,0.3); }
-        .channel-card:hover, .channel-card.active-card { border-color: var(--accent-red); background: #22252d; }
-        .channel-card i { color: var(--accent-red); font-size: 32px; drop-shadow: 0 0 5px rgba(229, 9, 20, 0.5); }
-        .channel-card span { font-size: 14px; font-weight: 600; text-align: center; color: #eee; }
-
         .vip-ad-box { display: flex; justify-content: center; margin-bottom: 10px; background: #000; padding: 5px; border-radius: 8px; border: 1px solid #333; }
         .btn-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 8px; margin-bottom: 20px; }
         .action-btn { padding: 12px; border-radius: 8px; border: none; color: white; font-weight: 700; cursor: pointer; font-size: 13px; display: flex; align-items: center; justify-content: center; gap: 6px; text-decoration: none; transition: 0.2s; text-transform: uppercase; box-shadow: 0 4px 10px rgba(0,0,0,0.3); }
         .tg { background: var(--accent-blue); } .yt { background: var(--accent-red); }
+        .ad-wall { display: grid; grid-template-columns: 1fr; gap: 10px; margin-top: 5px; padding: 10px; background: #0a0b0e; border-radius: 10px; border: 1px solid #333; }
+        .ad-slot { background: #111; border-radius: 8px; overflow: hidden; display: flex; justify-content: center; align-items: center; min-height: 260px; border: 1px dashed #444; }
         
         #loader { position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); width: 40px; height: 40px; border: 4px solid rgba(255,255,255,0.3); border-top: 4px solid var(--accent-red); border-radius: 50%; animation: spin 1s linear infinite; display: none; z-index: 5; }
         @keyframes spin { 0% { transform: rotate(0deg); } 100% { transform: rotate(360deg); } }
         @keyframes blink { 0%, 100% { opacity: 1; transform: scale(1); } 50% { opacity: 0.5; transform: scale(0.8); } }
         @keyframes glow { 0% { box-shadow: 0 0 5px #ffb400; } 50% { box-shadow: 0 0 25px #ffb400; } 100% { box-shadow: 0 0 5px #ffb400; } }
 
+        /* TELEGRAM POPUP MODAL CSS */
         .modal-overlay { position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 1000; display: none; align-items: center; justify-content: center; backdrop-filter: blur(5px); }
         .modal-box { background: #1a1c23; border-radius: 16px; padding: 25px 20px; width: 90%; max-width: 350px; text-align: center; border: 1px solid #333; box-shadow: 0 10px 40px rgba(0,0,0,0.9); }
         .modal-title { font-size: 20px; font-weight: 800; margin-bottom: 12px; display: flex; align-items: center; justify-content: center; gap: 8px; color: white; }
@@ -77,8 +71,8 @@
         .mb-join { background: #0088cc; } .mb-join:hover { background: #0077b5; }
         .mb-close { background: #2a2d3a; color: #ddd; border: 1px solid #444; } .mb-close:hover { background: #333645; }
 
-        /* FOOTER CSS */
-        .site-footer { text-align: center; padding: 25px 15px 30px; margin-top: auto; border-top: 1px solid #222; color: #777; font-size: 13px; line-height: 1.6; width: 100%; box-sizing: border-box; background: #0a0b0e; }
+        /* FOOTER CSS (FIXED FOR MOBILE) */
+        .site-footer { text-align: center; padding: 20px 10px; margin-top: auto; border-top: 1px solid #222; color: #777; font-size: 11px; line-height: 1.5; width: 100%; box-sizing: border-box; background: #0a0b0e; }
         .site-footer .fw-bold { color: #aaa; font-weight: 700; }
         .site-footer .heart { color: #e50914; }
     </style>
@@ -189,11 +183,18 @@
         let clickCount = 0;
 
         function init() {
-            // Telegram Modal Popup logic
+            // NEW LOGIC: KAHIN BHI CLICK KARNE PAR POPUP AAYEGA
             if (!sessionStorage.getItem('tgModalShown')) {
-                setTimeout(() => {
-                    document.getElementById('tgModal').style.display = 'flex';
-                }, 2000); 
+                document.addEventListener('click', function triggerPopup(event) {
+                    // Agar user popup ke andar click kar raha hai toh ignore karein
+                    if (event.target.closest('#tgModal')) return;
+
+                    if (!sessionStorage.getItem('tgModalShown')) {
+                        document.getElementById('tgModal').style.display = 'flex';
+                        // Ek baar dikhane ke baad click event hata do taaki baar baar na aaye
+                        document.removeEventListener('click', triggerPopup); 
+                    }
+                });
             }
 
             // Ads Logic
@@ -216,7 +217,7 @@
         // Telegram Modal Close function
         function closeTelegramModal() {
             document.getElementById('tgModal').style.display = 'none';
-            sessionStorage.setItem('tgModalShown', 'true');
+            sessionStorage.setItem('tgModalShown', 'true'); // Isse refresh karne par dobara nahi aayega
         }
 
         function unlockSecret() {
@@ -295,8 +296,9 @@
                     }
                 }
             } else {
-                wrapper.style.aspectRatio = "auto"; 
-                wrapper.style.height = "550px"; 
+                // FIXED ASPECT RATIO FOR IFRAMES (Mobile par lamba nahi hoga)
+                wrapper.style.aspectRatio = "16/9"; 
+                wrapper.style.height = "auto"; 
                 video.style.display = 'none'; 
                 video.pause(); 
                 settingsBtn.style.display = 'none';
@@ -332,5 +334,5 @@
 
         init();
     </script>
-    </body>
+</body>
 </html>
