--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Match Manas - Direct Live</title>
+    <title>MKS sports - Direct Live</title>
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
@@ -30,7 +30,7 @@
         .player-box { width: 100%; max-width: 800px; background: var(--bg-card); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 50px rgba(0,0,0,0.7); border: 1px solid #333; position: relative; margin-top: 5px; }
 
         /* VIDEO WRAPPER */
-        .video-wrapper { position: relative; width: 100%; background: #000; display: flex; align-items: center; justify-content: center; aspect-ratio: 16/9; overflow: hidden; border-radius: 12px; }
+        .video-wrapper { position: relative; width: 100%; background: #000; display: flex; align-items: center; justify-content: center; overflow: hidden; border-radius: 12px; }
         video { width: 100%; height: 100%; display: block; object-fit: contain; }
         #iframe-box { position: absolute; top: 0; left: 0; width: 100%; height: 100%; z-index: 10; display: none; background: #000; }
         #iframe-box iframe { width: 100%; height: 100%; border: none; }
@@ -71,7 +71,7 @@
         .mb-join { background: #0088cc; } .mb-join:hover { background: #0077b5; }
         .mb-close { background: #2a2d3a; color: #ddd; border: 1px solid #444; } .mb-close:hover { background: #333645; }
 
-        /* FOOTER CSS (FIXED FOR MOBILE) */
+        /* FOOTER CSS */
         .site-footer { text-align: center; padding: 20px 10px; margin-top: auto; border-top: 1px solid #222; color: #777; font-size: 11px; line-height: 1.5; width: 100%; box-sizing: border-box; background: #0a0b0e; }
         .site-footer .fw-bold { color: #aaa; font-weight: 700; }
         .site-footer .heart { color: #e50914; }
@@ -100,7 +100,7 @@
 
     <div class="news-ticker-box">
         <div class="ticker-content">
-            🚀 JOIN TELEGRAM FOR TOSS, SESSION & MATCH WINNER REPORT! 🏆 100% ACCURATE MATCH PREDICTION! ⚡ CLICK JOIN NOW! 🚀 &nbsp;&nbsp;&nbsp;&nbsp; 🔴 WATCH LIVE MATCH HD FREE! 🔴
+            🚀 JOIN TELEGRAM FOR TOSS, SESSION & MATCH WINNER REPORT! 🏆 100% ACCURATE MATCH PREDICTION! ⚡ CLICK JOIN NOW! 🚀 &nbsp;&nbsp;&nbsp;&nbsp; 
         </div>
     </div>
 
@@ -183,15 +183,13 @@
         let clickCount = 0;
 
         function init() {
-            // NEW LOGIC: KAHIN BHI CLICK KARNE PAR POPUP AAYEGA
+            // LOGIC: KAHIN BHI CLICK KARNE PAR POPUP AAYEGA
             if (!sessionStorage.getItem('tgModalShown')) {
                 document.addEventListener('click', function triggerPopup(event) {
-                    // Agar user popup ke andar click kar raha hai toh ignore karein
                     if (event.target.closest('#tgModal')) return;
 
                     if (!sessionStorage.getItem('tgModalShown')) {
                         document.getElementById('tgModal').style.display = 'flex';
-                        // Ek baar dikhane ke baad click event hata do taaki baar baar na aaye
                         document.removeEventListener('click', triggerPopup); 
                     }
                 });
@@ -214,10 +212,9 @@
             renderSecretMenu();
         }
 
-        // Telegram Modal Close function
         function closeTelegramModal() {
             document.getElementById('tgModal').style.display = 'none';
-            sessionStorage.setItem('tgModalShown', 'true'); // Isse refresh karne par dobara nahi aayega
+            sessionStorage.setItem('tgModalShown', 'true'); 
         }
 
         function unlockSecret() {
@@ -268,7 +265,8 @@
             video.removeAttribute('src');
 
             if ((url.includes('.m3u8') || url.includes('.mp4')) && !url.includes('embed=true')) {
-                wrapper.style.height = "100%"; 
+                // M3U8/MP4 VIDEO KE LIYE 16:9 RATIO
+                wrapper.style.height = "auto"; 
                 wrapper.style.aspectRatio = "16/9"; 
                 iframeBox.style.display = 'none'; 
                 iframeBox.innerHTML = "";
@@ -296,9 +294,9 @@
                     }
                 }
             } else {
-                // FIXED ASPECT RATIO FOR IFRAMES (Mobile par lamba nahi hoga)
-                wrapper.style.aspectRatio = "16/9"; 
-                wrapper.style.height = "auto"; 
+                // 🔥 IFRAME KE LIYE FIX (Badi height taaki video chota na ho) 🔥
+                wrapper.style.aspectRatio = "auto"; 
+                wrapper.style.height = window.innerWidth <= 600 ? "320px" : "450px"; 
                 video.style.display = 'none'; 
                 video.pause(); 
                 settingsBtn.style.display = 'none';
@@ -320,7 +318,7 @@
         function toggleQualityMenu() { const menu = document.getElementById('quality-menu'); menu.style.display = (menu.style.display === 'block') ? 'none' : 'block'; }
 
         // FAKE VIEWER LOGIC
-        let viewerCount = 312; 
+        let viewerCount = 191; 
         const viewerDisplay = document.getElementById('fake-viewers');
         function updateViewers() {
             let direction = Math.random() < 0.5 ? -1 : 1; 
