--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             { id: "jokerbrand", name: "MKS sports", url: "https://mksplay.pages.dev/mkid?id=t20wc" },
             { id: "ytlive", name: "YouTube Live", url: "https://www.youtube.com/embed/CSTRAWxWBwQ" },
             { id: "HINDI", name: "Star Sports 1 Hindi", url: "https://mks-live.pages.dev/mkstar?channel_id=174"},
-            { id: "myfile", name: "Live Match", url: "https://store3.gofile.io/download/direct/YOUR-LINK-HERE/video.mp4" }
+            { id: "myfile", name: "Live Match", url: "https://vlive-au4.pages.dev/live-stream" }
         ];
 
         let hls = null;
