--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <script>
         const channels = [
             { id: "willow", name: "Willow HD", url: "https://amg01269-amg01269c1-sportstribal-emea-5204.playouts.now.amagi.tv/ts-eu-w1-n2/playlist/amg01269-willowtvfast-willowplus-sportstribalemea/playlist.m3u8" },
-            { id: "ytfinal", name: "MKS Sports (Worker)", url: "https://www.youtube.com/embed/FMxgXZol_dY" },
+            { id: "ytlive", name: "MKS Sports (Worker)", url: "https://www.youtube.com/embed/FMxgXZol_dY" },
             { id: "jokerbrand", name: "MKS sports", url: "https://mksplay.pages.dev/mkid?id=t20wc" },
             { id: "royal", name: "YouTube Live", url: "https://www.youtube.com/embed/wc2UbeTRYf8" },
             { id: "HINDI", name: "Star Sports 1 Hindi", url: "https://mks-live.pages.dev/mkstar?channel_id=174"},
