--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             { id: "ytlive", name: "MKS Sports (Worker)", url: "https://www.youtube.com/embed/FMxgXZol_dY" },
             { id: "jokerbrand", name: "MKS sports", url: "https://mksplay.pages.dev/mkid?id=t20wc" },
             { id: "royal", name: "YouTube Live", url: "https://www.youtube.com/embed/wc2UbeTRYf8" },
-            { id: "HINDI", name: "Star Sports 1 Hindi", url: "https://mks-live.pages.dev/mkstar?channel_id=174"},
+            { id: "HINDI", name: "Star Sports 1 Hindi", url: "https://skstar.pages.dev/splay?id=1108"},
             { id: "myfile", name: "Live Match", url: "https://vlive-au4.pages.dev/live-stream" }
         ];
 
