--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         // --- CHANNEL LIST ---
         const channels = [
             // 1. WILLOW (Direct Player Link)
-            { id: "willow", name: "Willow HD", url: "https://d2q8p4pe5spnk.cloudfront.net/live/willow/playlist.m3u8", isIframe: false },
+            { id: "willow", name: "Willow HD", url: "https://amg01269-amg01269c1-sportstribal-emea-5204.playouts.now.amagi.tv/ts-eu-w1-n2/playlist/amg01269-willowtvfast-willowplus-sportstribalemea/playlist.m3u8", isIframe: false },
             
             // 2. WEB STREAM (Vlive - Iframe)
             { id: "vlive", name: "Web Stream 1", url: "https://vlive-au4.pages.dev/live-stream", isIframe: true },
